--- a/source/makefile
+++ b/source/makefile
@@ -23,6 +23,16 @@ compile:
 	# --------------------------------------
 	$(cmp) $(arc) *.cc -c -std=$(stl)
 
+rebuild:
+	# --------------------------------------
+	# Compiling All Translation units
+	# --------------------------------------
+	$(cmp) $(arc) *.cc -c -std=$(stl)
+	# --------------------------------------
+	# Building Executable
+	# --------------------------------------
+	$(cmp) $(arc) *.o -o $(bin) -std=$(stl)
+
 main.o: main.cc
 	# --------------------------------------
 	#  Compiling Main.cc
