Sorting and renaming
Submodules moved to a new submodules folder, and appropriate changes have been made to project file and .gitignore.

main.cxx renamed to main.cpp, as it's not a dialog

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@
 !source/
 !resources/
 !screenshots/
-!indigo-stylesheet/
-!qt-hotkey-recorder-widget/
-!qt-vkid-table-widget/
+!submodules/
 
 !.gitignore
 !LICENSE
