--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-/*
-
-!source/
-!resources/
-!screenshots/
-!submodules/
-
-!release/
-release/*
-!release/create_release_archive.py
-
-!.gitignore
-!.gitattributes
-!LICENSE
-!README.md
-!*.pro
-
+builds
+release
+releases
+*.user
